    * prefs_options.inc: Add Monaco (Mac) & Lucida Console (Windows) as font prefs (bpfoley)
    * displayimage.php: Give browser hints for prefetching (bpfoley)
    * tasks.php: Verify user has permission to make request (bpfoley)
    * installation.txt: Various improvements (jmdyck)
    * list_etexts.php: Make gold/silver/bronze lists pageable (bpfoley)
    * diff.php: Add link to page image (donovang)
    * document.php, proofreading_guidelines.php: Clarifications & error-fixes (acunning40 via donovang)
    * site_vars.php: Check that site has magic_quotes_gpc is turned on (bpfoley)
    * various places: Adapt code to run under PHP >= 5.2 (bpfoley)
    * special_colors.inc: Rework presentation of Special Days legend (donovang)
    * archiving.inc: When archiving a project, also archive other data (jmdyck)
    * page_table.inc: Merge the per-round 'Clear' columns into one column at the right (cpeel)
    * various places: Use abbreviated project-state names where screen space is scarce (jmdyck)
    * project.php: Make the project page (in reduced form) accessible to guests (jmdyck)
    * smooth_reading.php: Remove direct download link, direct to project page (jmdyck)
    * dp_scroll.js, ctrl_frame.php: Fix bug re initializing JS variables (jmdyck)
    * stats/jpgraph_files: Updated to make efficient use of jpgraph cache (cpeel)
    * post_files.inc: Updated TEI XML output at PP stage (rwst)
    * proofreading interface: Prevent image from scaling down too far (weinsteinj)
    * base.inc: New include file for all .php pages to use; enforces maintenance mode and enables proper gettext() initialization (cpeel)
    * dp_main.inc: Deprecated by base.inc and require_login() (cpeel)
    * theme.inc: Refactor how headings and footers are output (cpeel, bfoley)
    * various places: _() wrappers around strings to allow translation (lvl, cpeel)
    * various places: Miscellaneous improvements (jmdyck, lmpryor, cpeel, donovang, mike_cie, rfarinha)

# vim: sw=4 ts=4 expandtab